<resources>
    <string name="app_name">Cokoa</string>
    <string name="parametro1">Identificación</string>
    <string name="parametro2">Password</string>
    <string name="colegio">Liceo de la Universidad de Nariño</string>
    <string name="perfil">Perfil</string>
    <string name="notificacion">Notificaciones</string>
    <string name="calificacion">Calificaciones</string>
    <string name="eventos">Eventos</string>
    <string name="horario_atencion">Horario de Atención</string>
    <string name="asistencia">Inasistencias</string>

    <string name="codigo">Código</string>
    <string name="configuracion">Configuración</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="emptyLogro">A la materia aún no se le asignan indicadores de logros</string>
    <string name="emptyNotasActividades">El indicador de logro aún no tiene actividades</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="provincia_prompt">Elija una provincia</string>

</resources>
