<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_calificaciones"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/calificacion" />
        <item
            android:id="@+id/nav_asistencia"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/asistencia" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notificacion" />
        <item
            android:id="@+id/nav_horario_atencion"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/horario_atencion" />
    </group>

    <item android:title="@string/configuracion">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_highlight_off_black_24dp"
                android:title="@string/cerrarSesion" />
        </menu>
    </item>

</menu>
