<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:paddingTop="16dp">

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/card_viewf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="70dp"
                            android:background="#ffffff"
                            card_view:cardCornerRadius="4dp">



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="80dp"
                                    android:text="ESCOBAR MORA JUAN JOSE" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="CURSO" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="3-5" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingTop="65dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            android:foregroundGravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/profe"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="2dp" />

                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="COKOA"
                    android:textColor="#dfdfdf"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#ffffff"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        android:gravity="center"
                        android:padding="20dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Aplicacion para el seguimiento academico continuo de los estudiantes, el cual le permie al padre de familia tener reportes de calidicaciones, asistencias a clases,resivir notificaciones y observar los horarios de atencion de los profesores."
                        android:textSize="14sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:paddingTop="20dp"
                        android:text="Reporte Calificaciones"
                        android:textColor="#eee"
                        android:textSize="30sp" />

                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="horizontal" />
            </FrameLayout>



            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">









                <LinearLayout
                    android:paddingTop="36dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        card_view:cardCornerRadius="4dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingTop="5dp"
                            android:orientation="horizontal"
                            >







                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/profile_images"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:foregroundGravity="center"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_notifications_active_black_24dp"
                                    app:civ_border_color="@color/colorAccent"
                                    app:civ_border_width="2dp" />

                                <TextView
                                    android:layout_width="wrap_content"

                                    android:layout_height="wrap_content"
                                    android:text="@string/notificacion"
                                    android:textSize="12dp" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"

                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:foregroundGravity="center"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_contact_mail_black_24dp"
                                    app:civ_border_color="@color/colorAccent"
                                    app:civ_border_width="2dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/horario_atencion"
                                    android:textSize="12dp" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:foregroundGravity="center"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_alarm_black_24dp"
                                    app:civ_border_color="@color/colorAccent"
                                    app:civ_border_width="2dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/asistencia"
                                    android:textSize="12dp" />


                            </LinearLayout>


                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                </LinearLayout>





                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/udenar"
                    android:gravity="bottom|center"
                    android:paddingBottom="8dp"
                    android:text="servicios de la aplicacion" />


            </LinearLayout>








        </LinearLayout>


    </ScrollView>
</RelativeLayout>